myapp/2-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  type: ClusterIP
  ports:
    - port: 1212
      targetPort: http
  selector:
    app: myapp
