myapp/3-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
spec:
  ingressClassName: external-nginx
  rules:
    - host: 1224b4df3d4.internet.am
      http:
        paths:
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: prometheus-community-grafana
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp
                port:
                  number: 1212
